@@ -35,44 +35,37 @@ if (open(OARSTAT, "$Oarstat_cmd -fj $Job_id -D |")){
 }
 
 if ($ARGV[0] eq "START"){
-    my $str = <<EOF;
-if (! system("diff /dev/cpuset/oar/$struct->{cpuset_name}/cpus /dev/cpuset/cpus > /dev/null 2>&1")){
-    if (open(ACCESS, "> $Security_file")){
-        print(ACCESS "# File generated by OAR.\n");
-        print(ACCESS "+:$struct->{owner}:ALL\n");
-        print(ACCESS "-:ALL:ALL\n");
-        close(ACCESS);
-    }else{
-        exit(1);
-    }
-}else{
-    if (open(ACCESS, "> $Security_file")){
-        print(ACCESS "# File generated by OAR.\n");
-        print(ACCESS "-:ALL:ALL\n");
-        close(ACCESS);
-    }else{
-        exit(1);
-    }
+    my $str = '
+my $file_str = "# File generated by OAR.\n";
+if (! system("diff /dev/cpuset/oar/'.$struct->{cpuset_name}.'/cpus /dev/cpuset/cpus > /dev/null 2>&1")){
+    $file_str .= "+:'.$struct->{owner}.':ALL\n";
 }
-EOF
+$file_str .= "-:ALL:ALL\n";
+if (open(ACCESS, "> '.$Security_file.'")){
+    print(ACCESS "$file_str");
+    close(ACCESS);
+}else{
+    exit(1);
+}
+';
     my @tmp = diffuse_cmd($struct->{assigned_network_address},$str,$Job_id);
     if ($#tmp >= 0){
         warn("ERROR: Some nodes are inaccessible @tmp\n");
         exit(5);
     }
 }elsif ($ARGV[0] eq "STOP"){
-    my $str = <<EOF;
-if (open(ACCESS, "> $Security_file")){
+    my $str = '
+if (open(ACCESS, "> '.$Security_file.'")){
     print(ACCESS "# File generated by OAR.\n");
     print(ACCESS "-:ALL:ALL\n");
     close(ACCESS);
 }else{
     exit(1);
 }
-if (! system("diff /dev/cpuset/oar/$struct->{cpuset_name}/cpus /dev/cpuset/cpus > /dev/null 2>&1")){
-    system("su - $struct->{owner} -c 'kill -9 -1'");
+if (! system("diff /dev/cpuset/oar/'.$struct->{cpuset_name}.'/cpus /dev/cpuset/cpus > /dev/null 2>&1")){
+#    system("su - '.$struct->{owner}.' -c \'kill -9 -1\'");
 }
-EOF
+';
     my @tmp = diffuse_cmd($struct->{assigned_network_address},$str,$Job_id);
     if ($#tmp >= 0){
         warn("ERROR: Some nodes are inaccessible @tmp\n");
